--- a/Bind/Src/ListadoProductoProyecto.fx.yaml
+++ b/Bind/Src/ListadoProductoProyecto.fx.yaml
@@ -3793,19 +3793,7 @@ ListadoProductoProyecto As screen:
                     DisplayMode.Edit
                 )
             FontWeight: =FontWeight.Bold
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                //ClearCollect(Col_BD_Dependencias;Lst_DependenciasPortafolio)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Text: ="Actualizar"
             Tooltip: ="Agregar Producto / Proyecto"
             Width: =98
@@ -3816,18 +3804,7 @@ ListadoProductoProyecto As screen:
         Image23 As image:
             Height: =40
             Image: ='nuevo actualizar '
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Tooltip: ="Actualizar datos"
             Width: =35
             X: =1634
@@ -3988,19 +3965,7 @@ ListadoProductoProyecto As screen:
                     DisplayMode.Edit
                 )
             FontWeight: =FontWeight.Bold
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                //ClearCollect(Col_BD_Dependencias;Lst_DependenciasPortafolio)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Text: ="Solicitar/Ingresar Orden"
             Tooltip: ="Agregar Producto / Proyecto"
             Visible: |-
@@ -4014,18 +3979,7 @@ ListadoProductoProyecto As screen:
         Image23_2 As image:
             Height: =40
             Image: ='layers (1)'
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Tooltip: ="Actualizar datos"
             Visible: |-
                 =If(
